<resources>
    <string name="app_name" translatable="false">PR Tools</string>
    <string name="nav_header_title" translatable="false">Prince Jatav</string>
    <string name="nav_header_subtitle" translatable="false">https://prinsberwa.com</string>
    <string name="menu_logo" translatable="false">Prince JI</string>
    <string name="princet" translatable="false">Developed by Prince Jatav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_app_info">App Info</string>
    <string name="action_changelog">Changelogs</string>
    <string name="action_update">Check Update</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Option 1</string>
    <string name="menu_slideshow">Option 2</string>
    <string name="menu_share">Share App</string>
    <string name="menu_exit">Close App</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_update">Help</string>
    <string name="share_content_message">https://prince.rf.gd/app-release.apk\nDownload now this awesome app.!</string>
    <string name="share_via_title">Share via</string>
    <string name="changelog_title">Changelogs</string>
    <string name="changelog_message">1.1: Initial reliase\n1.2: Added new features</string>
    <string name="app_icon">App Icon</string>
    <string name="view_license">View License</string>
    <string name="search">Search</string>
    <string name="others">Others</string>
    <string name="welcome_message">Thanks for installing!</string>
    <string name="notice_title">Disclaimer</string>
    <string name="notice_message">The views and opinions expressed on this blog are solely those of the author and do not necessarily reflect the official policy or position of any agency or organization. All content provided is for informational purposes only. The author is not responsible for any errors or omissions in the content or for any actions taken based on the information provided. Readers are advised to verify facts independently before making decisions based on this blog\'s content.</string>
    <string name="internet_connected">Connected to the internet.</string>
    <string name="internet_disconnected">No internet connection.</string>
    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Okay</string>
    <string name="no_app_to_handle">No app to handle this action</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="developed_by_prince">Developed By PRINCE™</string>
    <string name="app_is_expired">App is Expired</string>
    <string name="the_app_has_expired_please_download_the_latest_version_from_the_options_below">The app has expired. Please download the latest version from the options below.</string>
    <string name="download_from_play_store">Download from Play Store</string>
    <string name="download_from_indus_app_store">Download from Indus App Store</string>
    <string name="download_from_website">Download from Website</string>
    <string name="clock_icon">Clock Icon</string>
    <string name="agreement">By continuing sign in with Google, You are agree to Privacy Policy ahd Terms of this app.</string>
    <string name="welcome">Welcome! Dear User</string>
    <string name="read_more">Read More</string>

    <!-- App store labels -->
    <string name="google_play_store">Google Play Store</string>
    <string name="indus_app_store">Indus App Store</string>
    <string name="play_store">Play Store</string>
    <string name="indus_store">Indus AppStore</string>

    <!-- Download and update -->
    <string name="download_and_install">Download and Install</string>
    <string name="starting_download">Starting download…</string>
    <string name="downloading_update">Downloading update</string>
    <string name="downloading_percentage">Downloading: %d%%</string>
    <string name="download_failed">Download failed. Please try again.</string>
    <string name="download_complete">Download complete</string>
    <string name="update_downloaded">Update Downloaded</string>
    <string name="install_update_now">Do you want to install the update now?</string>
    <string name="install">Install</string>
    <string name="install_update">Install Update</string>
    <string name="update_file_not_found">Update file not found</string>

    <!-- strings.xml additions -->
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_subtitle">Sign in to continue to your account</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="secure_login">Secure login with Google</string>
    <string name="terms_and_privacy">By continuing, you agree to our Terms of Service and Privacy Policy</string>
    <string name="app_description">Your trusted companion for managing your daily tasks and staying organized</string>


    <!-- Hidden Settings -->
        <string name="hidden_settings">Hidden Settings</string>
        <string name="hidden_settings_category">App Security</string>
        <string name="enable_screenshots">Enable Screenshots</string>
        <string name="enable_screenshots_summary">Allow taking screenshots within the app</string>
</resources>