<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24px"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/progress_helper"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/tag_24px"
            android:title="@string/menu_slideshow" />

    </group>
    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_all_outline"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/power"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>